Right click in Particle Edit mode closes application #38233

Closed
opened 2014-01-15 15:32:07 +01:00 by Rumen Belev · 9 comments

System Information
Windows 7 Ultimate 64 bit and Nvidia GeForce GTX 480

Blender Version
Broken: 2.69.0 r60995
Worked: (optional)

Short description of error
Right click in Particle Edit mode closes application
Exact steps for others to reproduce the error

  1. Create Plane.
  2. Add Particle System and Bake without any additional settings.
  3. Go to Particle Edit mode and switch to Tip Select mode.
  4. Try selecting a particle tip with right mouse button (The application crashes)

Based on a (as simple as possible) attached .blend file with minimum amount of steps:
http://dox.bg/files/dw?a=5ca48e5a3c

**System Information** Windows 7 Ultimate 64 bit and Nvidia GeForce GTX 480 **Blender Version** Broken: 2.69.0 r60995 Worked: (optional) **Short description of error** Right click in Particle Edit mode closes application **Exact steps for others to reproduce the error** 1. Create Plane. 2. Add Particle System and Bake without any additional settings. 3. Go to Particle Edit mode and switch to Tip Select mode. 4. Try selecting a particle tip with right mouse button (The application crashes) Based on a (as simple as possible) attached .blend file with minimum amount of steps: http://dox.bg/files/dw?a=5ca48e5a3c
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @syziph

Added subscriber: @syziph

Added subscriber: @Paul.Brachmann

Added subscriber: @Paul.Brachmann

I cannot confirm this problem based on the given steps.
Using the provided .blend I get a crash as well.
My system:
Windows 7 Professional x64, nVidia GeForce GTX 660

I cannot confirm this problem based on the given steps. Using the provided .blend I get a crash as well. My system: Windows 7 Professional x64, nVidia GeForce GTX 660

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by blender/blender-addons-contrib@c78d9a3184

This issue was referenced by blender/blender-addons-contrib@c78d9a318429703463a74df5ad23722ab37e1bbb

This issue was referenced by c78d9a3184

This issue was referenced by c78d9a318429703463a74df5ad23722ab37e1bbb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c78d9a3184.

Closed by commit c78d9a3184.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38233
No description provided.