Fix T38233: Right click in Particle Edit mode closes application

It was wrong memory access in selection operators when point doesn't
have keys.